--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,23 +1,29 @@
+<% include partials/header %>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <!--todo change including bootstrap css -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/js/jquery.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="stylesheets/form.css">
 </head>
 <body>
     <div class="container">
+        <H2>Log in to continue.</H2>
         <form action="/login" method="post">
             <label for="username">Username:</label>
             <input type='text' name='username' class='form-control' />
             <label for="username">Password:</label>
             <input type='password' name='password' class='form-control' value='' />
             <button class="btn btn-block btn-lg" type="submit">Log in</button>
+        </form>
+        <form>
             <button class="btn btn-block btn-danger btn-lg" formaction="/" formmethod="get">Go back</button>
         </form>
     </div>
