--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -6,12 +6,18 @@
             <%if (user) { %>
             <li class="dropdown">
                 <a href="#" class="dropdown-backdrop" data-toggle="dropdown" role="button"
-                   aria-haspopup="true" aria-expanded="false"><%=user.username%><span class="caret"></span></a>
+                   aria-haspopup="true" aria-expanded="false">
+                    <%if(user.fullname) {%>
+                    <%=user.fullname%>
+                    <%} else {%>
+                    <%=user.username%>
+                    <%}%>
+                    <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="/profile">Profile</a></li>
                     <li><a href="#">My calendars</a></li>
                     <li role="separator" type="divider"></li>
-                    <li><a href="#">Add new event</a></li>
+                    <li><a href="/add_event">Add new event</a></li>
                     <li role="separator" type="divider"></li>
                     <li><a href="/logout">Log out</a></li>
                 </ul>
