--- a/src/views/sign_up.ejs
+++ b/src/views/sign_up.ejs
@@ -1,23 +1,34 @@
+<% include partials/header %>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <!--todo change including bootstrap css -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/js/jquery.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="stylesheets/form.css">
 </head>
 <body>
 <div class="container">
+    <H2>Sign up to Sparkle and start planning right now</H2>
     <form action="/sign_up" method="post">
-        <label for="username">Username:</label>
-        <input type='text' name='username' class='form-control' />
+        <label for="username">Pic a username (be careful, you can not change this one later!):</label>
+        <input type='text' name='username' class='form-control' required/>
+        <label for="username">Email:</label>
+        <input type='text' name='email' class='form-control' />
+        <label for="username">Telegram username:</label>
+        <input type='text' name='telegram' class='form-control' />
         <label for="username">Password:</label>
-        <input type='password' name='password' class='form-control' value='' />
+        <input type='password' name='password' class='form-control' value='' required/>
         <button class="btn btn-block btn-lg" type="submit">Sign up</button>
-        <button class="btn btn-block btn-danger btn-lg" formaction="/" formmethod="get">Cancel</button>
+    </form>
+    <form>
+        <button class="btn btn-block btn-danger btn-lg" formaction="/" formmethod="get">Go back</button>
     </form>
 </div>
 <div class="text-center"> Already registered? <a href="/login">Log in.</a> </div>
