--- a/src/views/edit_profile.ejs
+++ b/src/views/edit_profile.ejs
@@ -20,10 +20,10 @@
                 <img alt="user avatar" src="<%=user.profile_pic%>"
                      id="profile-image" class="img-circle">
                 <br>
-                <a class="text-center" href="/edit_profile_img">Click here to upload new profile image</a>
+                <a class="text-center" href="/profile/edit_img">Click here to upload new profile image</a>
             </div>
             <div class="col-md-6">
-            <form action="/edit_profile" method="post">
+            <form action="/profile/edit" method="post">
 
                 <div class="clearfix"></div>
                 <div class="bot-border"></div>
