--- a/src/views/edit_profile_img.ejs
+++ b/src/views/edit_profile_img.ejs
@@ -21,7 +21,7 @@
                      id="profile-image" class="img-circle">
             </div>
             <div class="col-md-6">
-            <form action="/edit_profile_img" method="post" enctype="multipart/form-data">
+            <form action="/profile/edit_img" method="post" enctype="multipart/form-data">
 
                 <div class="clearfix"></div>
                 <div class="bot-border"></div>
