--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -27,7 +27,7 @@
                         <%=user.username%>
                     <%}%>
                     . <br> It`s your profile page</h2><br>
-                <span><a href="/edit_profile">edit profile</a></span>
+                <span><a href="/profile/edit">edit profile</a></span>
             </div>
                 <div class="clearfix"></div>
                 <hr>
