fixed navbar and added calendar weekly layout

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -31,29 +31,8 @@
 </div>
 <%} else {%>
     <div class="col-md-7">
-        <div class="container-fluid action">
-            <div class="col-md-3 action_container"> <img class="action_pic" src="https://upload.wikimedia.org/wikipedia/commons/6/69/Calendar_font_awesome.svg"></div>
-            <div class="col-md-8 text-left">
-                <a href="#"><H1>See your calendars </H1></a>
-            </div>
-        </div>
-        <div class="container-fluid action">
-            <div class="col-md-3 action_container"> <img class="action_pic" src="https://icon-icons.com/icons2/933/PNG/512/round-add-button_icon-icons.com_72595.png"></div>
-            <div class="col-md-8 text-left">
-                <a href="/add_event"><H1>Add new event</H1></a>
-            </div>
-        </div>
-        <div class="container-fluid action">
-            <div class="col-md-3"> <img class="action_pic" src="https://png.icons8.com/?id=14079&size=280"></div>
-            <div class="col-md-8 text-left">
-                <a href="#"><H1> Search </H1></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-md-5">
         <div>
-            <h2>Get a quick look on upcoming events</h2>
+            <h2>Take a quick look on upcoming events</h2>
         </div>
         <div class="panel panel-default">
 
@@ -93,6 +72,27 @@
             </div>
         </div>
     </div>
+    <div class="col-md-5">
+        <div class="container-fluid action">
+            <div class="col-md-5 action_container"> <img class="action_pic" src="https://upload.wikimedia.org/wikipedia/commons/6/69/Calendar_font_awesome.svg"></div>
+            <div class="col-md-7 text-left">
+                <a href="/calendar/week"><H1>See calendars </H1></a>
+            </div>
+        </div>
+        <div class="container-fluid action">
+            <div class="col-md-5 action_container"> <img class="action_pic" src="https://icon-icons.com/icons2/933/PNG/512/round-add-button_icon-icons.com_72595.png"></div>
+            <div class="col-md-7 text-left">
+                <a href="/add_event"><H1>Add new event</H1></a>
+            </div>
+        </div>
+        <div class="container-fluid action">
+            <div class="col-md-5"> <img class="action_pic" src="https://png.icons8.com/?id=14079&size=280"></div>
+            <div class="col-md-7 text-left">
+                <a href="/search"><H1> Search </H1></a>
+            </div>
+        </div>
+    </div>
+
 <%}%>
 </body>
 </html>
