--- a/src/public/stylesheets/index.css
+++ b/src/public/stylesheets/index.css
@@ -49,12 +49,23 @@ html {
 }
 
 .action_pic {
-    width: 100%;
+    /*height: 25%;*/
+    /*width: auto;*/
+    width: 90%;
 }
 
 a:link {
     text-decoration: none;
     color: #00796B;
+}
+
+a:visited {
+    text-decoration: none;
+    color: #00796B;
+}
+
+a:hover {
+    color: rgba(0, 121, 107, 0.6);
 }
 
 a:link H1:hover {
@@ -68,4 +79,10 @@ a:link H1:hover {
 
 .nav_btn {
     margin-top: 0.3em;
+}
+
+.panel {
+    width: 100%;
+    max-height: 75%;
+    overflow-y: scroll;
 }
