added event page, deleting and editing events

--- a/src/views/add_event.ejs
+++ b/src/views/add_event.ejs
@@ -11,10 +11,11 @@
     <script src="/js/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="stylesheets/form.css">
+    <!--<link rel="stylesheet" href="stylesheets/form.css">-->
 </head>
 <body>
 <div class="container">
+    <H2>Add new event</H2>
     <form action="/add_event" method="post">
         <label for="username">Event name:</label>
         <input type='text' name='name' class='form-control' required/>
