--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="stylesheets/navbar.css">
+<!--<link rel="stylesheet" href="stylesheets/navbar.css">-->
 
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid navbar-collapse collapse">
