search, pagination and some basic features for admin

--- a/src/views/edit_event.ejs
+++ b/src/views/edit_event.ejs
@@ -29,7 +29,7 @@
                     <div class="bot-border"></div>
 
                     <label for="place">Place:</label>
-                    <input type='text' name='place' class='form-control' value="<%=event.place%>" required/>
+                    <input type='text' name='place' class='form-control' value="<%=event.place%>"/>
                     <div class="clearfix"></div>
                     <div class="bot-border"></div>
 
