fixed little mistake in form

--- a/src/views/sign_up.ejs
+++ b/src/views/sign_up.ejs
@@ -17,7 +17,7 @@
 <div class="container">
     <H2>Sign up to Sparkle and start planning right now</H2>
     <form action="/sign_up" method="post">
-        <label for="username">Pic a username (be careful, you can not change this one later!):</label>
+        <label for="username">Pick a username (be careful, you can not change this one later!):</label>
         <input type='text' name='username' class='form-control' required/>
         <label for="username">Email:</label>
         <input type='text' name='email' class='form-control' />
