--- a/src/views/sign_up.ejs
+++ b/src/views/sign_up.ejs
@@ -12,11 +12,12 @@
     <script src="/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="stylesheets/form.css">
+    <script src="javascripts/validate_signup.js"></script>
 </head>
 <body>
 <div class="container">
     <H2>Sign up to Sparkle and start planning right now</H2>
-    <form action="/sign_up" method="post">
+    <form action="/sign_up" method="post" onsubmit="return(validate());">
         <label for="username">Pick a username (be careful, you can not change this one later!):</label>
         <input type='text' name='username' class='form-control' required/>
         <label for="username">Email:</label>
@@ -24,7 +25,9 @@
         <label for="username">Telegram username:</label>
         <input type='text' name='telegram' class='form-control' />
         <label for="username">Password:</label>
-        <input type='password' name='password' class='form-control' value='' required/>
+        <input type='password' name='password' class='form-control' value=''
+               id='pass_input' oninput='validate_pass(password)' required/>
+        <div class="error alert-danger" id="pass_error"><br></div>
         <button class="btn btn-block btn-lg" type="submit">Sign up</button>
     </form>
     <form>
