--- a/src/views/sign_up.ejs
+++ b/src/views/sign_up.ejs
@@ -20,14 +20,18 @@
     <form action="/sign_up" method="post" onsubmit="return(validate());">
         <label for="username">Pick a username (be careful, you can not change this one later!):</label>
         <input type='text' name='username' class='form-control' required/>
-        <label for="username">Email:</label>
+        <label for="email">Email:</label>
         <input type='text' name='email' class='form-control' />
-        <label for="username">Telegram username:</label>
+        <label for="telegram">Telegram username:</label>
         <input type='text' name='telegram' class='form-control' />
-        <label for="username">Password:</label>
+        <label for="password">Password:</label>
         <input type='password' name='password' class='form-control' value=''
                id='pass_input' oninput='validate_pass(password)' required/>
         <div class="error alert-danger" id="pass_error"><br></div>
+        <label for="password2">Repeat your password:</label>
+        <input type='password' name='password2' class='form-control' value=''
+               id='pass_input2' oninput='validate_pass_match(password)' required/>
+        <div class="error alert-danger" id="pass_error2"><br></div>
         <button class="btn btn-block btn-lg" type="submit">Sign up</button>
     </form>
     <form>
