--- a/src/views/add_event.ejs
+++ b/src/views/add_event.ejs
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel=icon href=favicon.ico sizes="16x16" type="image/png">
 
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <script src="/js/jquery.js"></script>
@@ -27,6 +28,9 @@
         <input type='time' name='start_time' class='form-control' value='12:00' step="300" required/>
         <label for="end_time">End time:</label>
         <input type='time' name='end_time' class='form-control' value='12:00' step="300" required/>
+        <input type="checkbox" name="notification" value="true">I would like to get notification via Sparkle Bot<br>
+        <label for="end_time">Notification time:</label>
+        <input type='datetime-local' name='notification_time' class='form-control' value='12:00' step="300" required/>
         <!--<label for="description">Description:</label>-->
         <!--<input type='text' name='description' class='form-control' value='' required/>-->
 
