--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -11,6 +11,8 @@
     <script src="/js/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 
+    <link rel=icon href=favicon.ico sizes="16x16" type="image/png">
+
     <link rel="stylesheet" href="stylesheets/form.css">
 </head>
 <body>
