--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -10,6 +10,8 @@
     <script src="/jq/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 
+    <link rel=icon href=favicon.ico sizes="16x16" type="image/png">
+
     <link href="stylesheets/profile.css" rel="stylesheet">
 </head>
 <body>
