--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,6 +10,8 @@
     <script src="/jq/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 
+    <link rel=icon href=favicon.ico sizes="16x16" type="image/png">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheets/index.css">
 
