--- a/src/views/add_event.ejs
+++ b/src/views/add_event.ejs
@@ -28,8 +28,8 @@
         <input type='time' name='start_time' class='form-control' value='12:00' step="300" required/>
         <label for="end_time">End time:</label>
         <input type='time' name='end_time' class='form-control' value='12:00' step="300" required/>
-        <input type="checkbox" name="notification" value="true">I would like to get notification via Sparkle Bot<br>
-        <label for="end_time">Notification time:</label>
+        <!--<input type="checkbox" name="notification" value="true">I would like to get notification via Sparkle Bot<br>-->
+        <!--<label for="end_time">Notification time:</label>-->
         <input type='datetime-local' name='notification_time' class='form-control' value='12:00' step="300" required/>
         <!--<label for="description">Description:</label>-->
         <!--<input type='text' name='description' class='form-control' value='' required/>-->
