--- a/src/views/edit_profile.ejs
+++ b/src/views/edit_profile.ejs
@@ -11,6 +11,7 @@
     <script src="/js/bootstrap.min.js"></script>
 
     <link rel=icon href=favicon.ico sizes="16x16" type="image/png">
+    <script src="javascripts/validate_edit.js"></script>
 
     <link rel="stylesheet" href="stylesheets/form.css">
 </head>
@@ -25,7 +26,7 @@
                 <a class="text-center" href="/profile/edit_img">Click here to upload new profile image</a>
             </div>
             <div class="col-md-6">
-            <form action="/profile/edit" method="post">
+            <form action="/profile/edit" method="post" onsubmit="return(validate());">
 
                 <div class="clearfix"></div>
                 <div class="bot-border"></div>
@@ -39,14 +40,18 @@
 
                 <div class="col-sm-5 col-xs-6 tital " >Email:</div>
                 <div class="col-sm-7 col-xs-6 ">
-                    <input type='text' name='email' class='form-control' value="<%=user.email%>"/>
+                    <input type='text' name='email' class='form-control' value="<%=user.email%>"
+                           id='email_input' onblur='validate_email()'/>
+                    <div class="error alert-danger" id="email_error"><br></div>
                 </div>
                 <div class="clearfix"></div>
                 <div class="bot-border"></div>
 
                 <div class="col-sm-5 col-xs-6 tital " >Telegram:</div>
                 <div class="col-sm-7">
-                    <input type='text' name='telegram' class='form-control' value="<%=user.telegram%>"/>
+                    <input type='text' name='telegram' class='form-control' value="<%=user.telegram%>"
+                           id='telegram_input' onblur='validate_telegram()'/>
+                    <div class="error alert-danger" id="telegram_error"><br></div>
                 </div>
                 <div class="clearfix"></div>
                 <div class="bot-border"></div>
